# neuralib

./: .gitignore  Cargo.toml  README.md  TODO.md
examples/mnist/: Cargo.toml
examples/mnist/src/: main.rs
scripts/: img_to_bytes.py
src/: activation.rs  error.rs  layer.rs  lib.rs  network.rs  neuron.rs  training.rs
