[package]
name = "neuralib"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Jacoblightning/neuralib"
description = "A simple Neural Network Library in Rust"
resolver = "3"
exclude = [
    "TODO.md",
    ".github",
    ".gitignore"
]

[dependencies]
idx-lib = { version = "0.0.2", optional = true }
rand = "0.9.2"
rand_distr = { version = "0.5.1", default-features = false, features = ["std"] }

[features]
idx = ["dep:idx-lib"]
